// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image field render with no value 1`] = `
<div
  className="file-input-container"
>
  <div
    className="file-input"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div>
      {"label":"Upload Image"}
    </div>
  </div>
</div>
`;

exports[`Image field render with value 1`] = `
<div
  className="file-input-container"
>
  <div
    className="file-display"
  >
    <img
      className="file-image"
      src="/foo"
    />
    <p
      className="file-delete"
      onClick={[Function]}
    >
      Delete Image
    </p>
  </div>
  <div
    className="file-input"
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <div>
      {"label":"Upload Image"}
    </div>
  </div>
</div>
`;
